Fixing display issues on iPhone 6.

--- a/src/app/components/believe/believe.component.css
+++ b/src/app/components/believe/believe.component.css
@@ -9,9 +9,6 @@
     margin-bottom: 15%;
     text-align: center;
 	height: 90%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
     line-height:45px;
 }
 
@@ -26,9 +23,7 @@
     margin-bottom: 15%;
     text-align: center;
 	height: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+
 }	
 
 .bgColor1 {
